# vision_por_computador

./: .gitignore  README.md
L0/: CMakeLists.txt  DisplayImage  DisplayImage.cpp  Example1  Example1.cpp  Example2  Example2.cpp  captureImage.cpp  matrix.cpp  opencv_version.cpp
L0/v4l2loopback-main/: .Module.symvers.cmd  .modules.order.cmd  .v4l2loopback.ko.cmd  .v4l2loopback.mod.cmd  .v4l2loopback.mod.o.cmd  .v4l2loopback.o.cmd  backup-021420221546-pre-v4l2loopback.tgz  modules.order  v4l2loopback.ko  v4l2loopback.mod.c  v4l2loopback_202202141546-git-1_amd64.deb
L0/v4l2loopback-main/utils/: v4l2loopback-ctl
L1/: CMakeLists.txt  README.txt  alienEffect.cpp  cartoonEffect.cpp  cmake.sh  main.cpp  prueba.cpp  videoCapture.cpp
L2/Entrega/: main.cpp
L2/src/: CMakeLists.txt  main.cpp  manualSobel.cpp
L3/: CMakeLists.txt  aprender.cpp  aprender.hpp  descriptores.cpp  descriptores.hpp  main.cpp  reconocer.cpp  reconocer.hpp
L3/Entrega/: reconocer.cpp
L4/: CMakeLists.txt  cmake.sh  main  main.cpp  prueba.cpp
