cmake_minimum_required(VERSION 2.8)
project( Example )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( Example2 Example2.cpp )
add_executable( Example1 Example1.cpp )
add_executable( captureImage captureImage.cpp )
add_executable( opencv_version opencv_version.cpp )
add_executable( DisplayImage DisplayImage.cpp )
add_executable( matrix matrix.cpp )
target_link_libraries( Example2 ${OpenCV_LIBS} )
target_link_libraries( Example1 ${OpenCV_LIBS} )
target_link_libraries( captureImage ${OpenCV_LIBS} )
target_link_libraries( opencv_version ${OpenCV_LIBS} )
target_link_libraries( DisplayImage ${OpenCV_LIBS} )
target_link_libraries( matrix ${OpenCV_LIBS} )
