cmake_minimum_required(VERSION 2.8)
project( Example )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( main main.cpp )
target_link_libraries( main ${OpenCV_LIBS} )
# add_executable( prueba prueba.cpp )
# target_link_libraries( prueba ${OpenCV_LIBS} )
# add_executable( videoCapture videoCapture.cpp )
# target_link_libraries( videoCapture ${OpenCV_LIBS} )
