cmake_minimum_required(VERSION 2.8)
project( Example )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( main main.cpp )
target_link_libraries( main ${OpenCV_LIBS} )
add_executable( manualSobel manualSobel.cpp )
target_link_libraries( manualSobel ${OpenCV_LIBS} )